--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,11 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   }
 }
