--- a/Appointment-system/package.json
+++ b/Appointment-system/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.4.7",
     "vue": "^3.4.34",
     "vue-router": "^4.2.0",
+    "vue3-toastify": "^0.2.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
