--- a/backend/package.json
+++ b/backend/package.json
@@ -27,5 +27,8 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
