--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/timegrid": "^6.0.0",
     "@fullcalendar/vue3": "^6.1.15",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.3",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "vue": "^3.4.34",
