--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   # Skip the build step
   command = "echo 'Skipping build'"
+  publish = "frontend/dist"  
 
 [build.environment]
   NODE_ENV = "production"
