Changed publish path in netlify.toml file

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   # Skip the build step
   command = "echo 'Skipping build'"
-  publish = "frontend/dist"  
+  publish = "dist"  
 
 [build.environment]
   NODE_ENV = "production"
