--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # Skip the build step
-  command = "echo 'Skipping build'"
+  command = "npm run build"
+  publish = "dist"
 
 [build.environment]
   NODE_ENV = "production"
