--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.3",
+    "mitt": "^3.0.1",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "vue": "^3.4.34",
